TA-14: mobile fix z-index/positioning issue

--- a/src/app/day/day.component.scss
+++ b/src/app/day/day.component.scss
@@ -5,6 +5,7 @@
   max-height: 640px;
   max-width: 440px;
   overflow: hidden;
+  position: relative;
   width: 100vw;
   z-index: 1;
   background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%) no-repeat;
