--- a/src/app/itinerary/itinerary.component.scss
+++ b/src/app/itinerary/itinerary.component.scss
@@ -6,6 +6,7 @@
   max-height: 640px;
   max-width: 440px;
   overflow: hidden;
+  position: relative;
   width: 100vw;
   z-index: 1;
 }
